radiasoft/ops#370 fixed z-index; use bootstrap dropdown supported codes dropdown works, fonts and formating not right Thanks @moellep for help with z-index and boostrap! Have to bring in bootstrap.js to get dropdown to work.

--- a/sirepo/package_data/static/en/css/landing.css
+++ b/sirepo/package_data/static/en/css/landing.css
@@ -353,7 +353,6 @@
   padding-bottom: 0;
   margin-bottom: 160px;
   transform: translateZ(0.1px);
-  z-index: 1;
 }
 .landing .intro::before {
   content: '';
